--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <HTML>
    <head>
    	<title>Adega 51</title>
+    <link rel="stylesheet" href="style.css"
    </head>
 
    <body>
    <h1>Adega 51 </h1>
-Adega 51 se localiza no centro da cidade,Perto do posto inpiranga nos "estado do Paraná"
-Oferecemos bebidas  de alta qualidade como;
-TEQUILA
-VODKA
-WHISKY 
-entre outras.
-Pretendemos nois torna uma adega multinacional com exportaçoẽs para fora do pais.
-Nossoa atendimentos são exelentes com funcionarios proficonais.
+<P>Adega 51 se localiza no centro da cidade,Perto do posto inpiranga nos "estado do Paraná"
+Oferecemos bebidas  de alta qualidade como;</p>
+<p>TEQUILA</p>
+<P>VODKA</p>
+<p>WHISKY</p>
+<p>entre outras</p>
+<p>Pretendemos nois torna uma adega multinacional com exportaçoẽs para fora do pais.
+Nossoa atendimentos são exelentes com funcionarios proficonais.</p>
 
 
 
