--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
    </head>
 
    <body>
-   <h1>Adega 51 </h1>
+   
+<img src="adega.png" class="adega">
+
+<h1>Adega 51 </h1>
 <P>Adega 51 se localiza no centro da cidade,Perto do posto inpiranga nos "estado do Paraná"
 Oferecemos bebidas  de alta qualidade como;</p>
 <p>TEQUILA</p>
@@ -15,6 +18,7 @@ Oferecemos bebidas  de alta qualidade como;</p>
 <p>entre outras</p>
 <p>Pretendemos nois torna uma adega multinacional com exportaçoẽs para fora do pais.
 Nossoa atendimentos são exelentes com funcionarios proficonais.</p>
+
 
 
 
